[package]
name = "drive-cli"
version = "0.1.0"
authors = ["Ian <ianguimaraes31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drive-server = "0.1.1"
drive-client = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
sha-1 = "0.9.3"
hex = "0.3.1"

