[package]
name = "hana-cli"
version = "0.1.0"
authors = ["Ian <ianguimaraes31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hana-server = "0.1.5"
hana-client = "0.1.3"
hana-types= "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
sha-1 = "0.9.3"
hex = "0.3.1"
lazy_static = "1.4.0"

